--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   animated_text_kit: ^4.2.2
   mask_text_input_formatter: ^2.4.0
+  badges: ^2.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
