--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   intl: ^0.17.0
   qr_flutter: ^4.0.0
   shimmer: ^2.0.0
+  get: ^4.6.5
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
