--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   qr_flutter: ^4.0.0
   shimmer: ^2.0.0
   get: ^4.6.5
+  dio: ^4.0.6
   
 
   # The following adds the Cupertino Icons font to your application.
