--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shimmer: ^2.0.0
   get: ^4.6.5
   dio: ^4.0.6
+  json_annotation: ^4.7.0
   
 
   # The following adds the Cupertino Icons font to your application.
@@ -47,6 +48,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.10.0
+  json_serializable: ^6.4.1
+  build_runner: ^2.2.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
