--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   get: ^4.6.5
   dio: ^4.0.6
   json_annotation: ^4.7.0
+  freezed: ^2.1.1
+  freezed_annotation: ^2.1.0
+  flutter_secure_storage: ^6.0.0
   
 
   # The following adds the Cupertino Icons font to your application.
